--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Database Helper: Chat2Query</title>
+    <title>Data Copliot</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../static/css/styles.css"> 
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="text-center">Database Helper: Chat2Query</h1>
+        <h1 class="text-center">Data Copliot</h1>
         
         <!-- Database link input -->
         <form id="db-link-form" class="mb-3" onsubmit="setDbLink(event)">
